proszcz/src/ms/gp/parser/gen/ProszczGPParser.java
// Generated from java-escape by ANTLR 4.11.1
package ms.gp.parser.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ProszczGPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, EOS=47, NAZWA=48, NAPIS_DOSL=49, STALA=50, IntegerLiteral=51, 
		COMMENT=52, SL_COMMENT=53, WS=54;
	public static final int
		RULE_plik = 0, RULE_instrukcja = 1, RULE_nazwanapis = 2, RULE_echo = 3, 
		RULE_ustaw_nazwe = 4, RULE_ustaw_katalog = 5, RULE_wykonaj_skrypt = 6, 
		RULE_przypadki = 7, RULE_opcja_przypadkow = 8, RULE_pisz_przypadki = 9, 
		RULE_funkcja_przystosowania = 10, RULE_fprzyst_klasa = 11, RULE_wczytaj_srodowisko = 12, 
		RULE_zapisz_srodowisko = 13, RULE_listuj_srodowiska = 14, RULE_rozmiar_populacji = 15, 
		RULE_inicjalizacja_populacji = 16, RULE_zapis_populacji = 17, RULE_zapis_populacji_gdzie = 18, 
		RULE_odczyt_populacji = 19, RULE_odczyt_populacji_gdzie = 20, RULE_listuj_populacje = 21, 
		RULE_nastepne = 22, RULE_statystyki = 23, RULE_nr_obecnej_generacji = 24, 
		RULE_inspekcja = 25, RULE_koniec_inspekcji = 26, RULE_inspekcja_srodowiska = 27, 
		RULE_zakoncz = 28, RULE_wstrzykniecie_osobnika_do_srodowiska = 29, RULE_ustawienie_wejsc = 30, 
		RULE_we_stdin = 31, RULE_we_tablica = 32, RULE_waga_operatora_genetycznego = 33, 
		RULE_listuj_operatory_genetyczne = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"plik", "instrukcja", "nazwanapis", "echo", "ustaw_nazwe", "ustaw_katalog", 
			"wykonaj_skrypt", "przypadki", "opcja_przypadkow", "pisz_przypadki", 
			"funkcja_przystosowania", "fprzyst_klasa", "wczytaj_srodowisko", "zapisz_srodowisko", 
			"listuj_srodowiska", "rozmiar_populacji", "inicjalizacja_populacji", 
			"zapis_populacji", "zapis_populacji_gdzie", "odczyt_populacji", "odczyt_populacji_gdzie", 
			"listuj_populacje", "nastepne", "statystyki", "nr_obecnej_generacji", 
			"inspekcja", "koniec_inspekcji", "inspekcja_srodowiska", "zakoncz", "wstrzykniecie_osobnika_do_srodowiska", 
			"ustawienie_wejsc", "we_stdin", "we_tablica", "waga_operatora_genetycznego", 
			"listuj_operatory_genetyczne"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'echo'", "'name'", "'cd'", "'exec'", "'cases'", "'from'", "'tinygp'", 
			"'plain'", "'show'", "','", "'fitfunc'", "'class'", "'in'", "'env'", 
			"'to'", "'envs'", "'popsize'", "'initpop'", "'grow'", "'full'", "'ramped-and-a-half'", 
			"'rah'", "'writepop'", "'readpop'", "'pops'", "'fwd'", "'stats'", "'gen'", 
			"'inspect'", "'resume'", "'halt'", "'inject'", "'specimen'", "'population'", 
			"'environment'", "'inj'", "':'", "'>'", "'setinput'", "'stdin'", "'op'", 
			"'genetic-operator'", "'%'", "'\\u00E2\\u20AC\\u00B0'", "'ops'", "'genetic-operators'", 
			"';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "EOS", 
			"NAZWA", "NAPIS_DOSL", "STALA", "IntegerLiteral", "COMMENT", "SL_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProszczGPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlikContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ProszczGPParser.EOF, 0); }
		public List<InstrukcjaContext> instrukcja() {
			return getRuleContexts(InstrukcjaContext.class);
		}
		public InstrukcjaContext instrukcja(int i) {
			return getRuleContext(InstrukcjaContext.class,i);
		}
		public PlikContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plik; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterPlik(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitPlik(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitPlik(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlikContext plik() throws RecognitionException {
		PlikContext _localctx = new PlikContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_plik);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 112227487533630L) != 0) {
				{
				{
				setState(70);
				instrukcja();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrukcjaContext extends ParserRuleContext {
		public TerminalNode EOS() { return getToken(ProszczGPParser.EOS, 0); }
		public EchoContext echo() {
			return getRuleContext(EchoContext.class,0);
		}
		public Ustaw_nazweContext ustaw_nazwe() {
			return getRuleContext(Ustaw_nazweContext.class,0);
		}
		public Ustaw_katalogContext ustaw_katalog() {
			return getRuleContext(Ustaw_katalogContext.class,0);
		}
		public Wykonaj_skryptContext wykonaj_skrypt() {
			return getRuleContext(Wykonaj_skryptContext.class,0);
		}
		public PrzypadkiContext przypadki() {
			return getRuleContext(PrzypadkiContext.class,0);
		}
		public Pisz_przypadkiContext pisz_przypadki() {
			return getRuleContext(Pisz_przypadkiContext.class,0);
		}
		public Funkcja_przystosowaniaContext funkcja_przystosowania() {
			return getRuleContext(Funkcja_przystosowaniaContext.class,0);
		}
		public Wczytaj_srodowiskoContext wczytaj_srodowisko() {
			return getRuleContext(Wczytaj_srodowiskoContext.class,0);
		}
		public Zapisz_srodowiskoContext zapisz_srodowisko() {
			return getRuleContext(Zapisz_srodowiskoContext.class,0);
		}
		public Listuj_srodowiskaContext listuj_srodowiska() {
			return getRuleContext(Listuj_srodowiskaContext.class,0);
		}
		public Rozmiar_populacjiContext rozmiar_populacji() {
			return getRuleContext(Rozmiar_populacjiContext.class,0);
		}
		public Inicjalizacja_populacjiContext inicjalizacja_populacji() {
			return getRuleContext(Inicjalizacja_populacjiContext.class,0);
		}
		public Zapis_populacjiContext zapis_populacji() {
			return getRuleContext(Zapis_populacjiContext.class,0);
		}
		public Odczyt_populacjiContext odczyt_populacji() {
			return getRuleContext(Odczyt_populacjiContext.class,0);
		}
		public Listuj_populacjeContext listuj_populacje() {
			return getRuleContext(Listuj_populacjeContext.class,0);
		}
		public NastepneContext nastepne() {
			return getRuleContext(NastepneContext.class,0);
		}
		public StatystykiContext statystyki() {
			return getRuleContext(StatystykiContext.class,0);
		}
		public Nr_obecnej_generacjiContext nr_obecnej_generacji() {
			return getRuleContext(Nr_obecnej_generacjiContext.class,0);
		}
		public InspekcjaContext inspekcja() {
			return getRuleContext(InspekcjaContext.class,0);
		}
		public Koniec_inspekcjiContext koniec_inspekcji() {
			return getRuleContext(Koniec_inspekcjiContext.class,0);
		}
		public Inspekcja_srodowiskaContext inspekcja_srodowiska() {
			return getRuleContext(Inspekcja_srodowiskaContext.class,0);
		}
		public ZakonczContext zakoncz() {
			return getRuleContext(ZakonczContext.class,0);
		}
		public Wstrzykniecie_osobnika_do_srodowiskaContext wstrzykniecie_osobnika_do_srodowiska() {
			return getRuleContext(Wstrzykniecie_osobnika_do_srodowiskaContext.class,0);
		}
		public Waga_operatora_genetycznegoContext waga_operatora_genetycznego() {
			return getRuleContext(Waga_operatora_genetycznegoContext.class,0);
		}
		public Listuj_operatory_genetyczneContext listuj_operatory_genetyczne() {
			return getRuleContext(Listuj_operatory_genetyczneContext.class,0);
		}
		public InstrukcjaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrukcja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterInstrukcja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitInstrukcja(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitInstrukcja(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrukcjaContext instrukcja() throws RecognitionException {
		InstrukcjaContext _localctx = new InstrukcjaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrukcja);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(78);
				echo();
				}
				break;
			case 2:
				{
				setState(79);
				ustaw_nazwe();
				}
				break;
			case 3:
				{
				setState(80);
				ustaw_katalog();
				}
				break;
			case 4:
				{
				setState(81);
				wykonaj_skrypt();
				}
				break;
			case 5:
				{
				setState(82);
				przypadki();
				}
				break;
			case 6:
				{
				setState(83);
				pisz_przypadki();
				}
				break;
			case 7:
				{
				setState(84);
				funkcja_przystosowania();
				}
				break;
			case 8:
				{
				setState(85);
				wczytaj_srodowisko();
				}
				break;
			case 9:
				{
				setState(86);
				zapisz_srodowisko();
				}
				break;
			case 10:
				{
				setState(87);
				listuj_srodowiska();
				}
				break;
			case 11:
				{
				setState(88);
				rozmiar_populacji();
				}
				break;
			case 12:
				{
				setState(89);
				inicjalizacja_populacji();
				}
				break;
			case 13:
				{
				setState(90);
				zapis_populacji();
				}
				break;
			case 14:
				{
				setState(91);
				odczyt_populacji();
				}
				break;
			case 15:
				{
				setState(92);
				listuj_populacje();
				}
				break;
			case 16:
				{
				setState(93);
				nastepne();
				}
				break;
			case 17:
				{
				setState(94);
				statystyki();
				}
				break;
			case 18:
				{
				setState(95);
				nr_obecnej_generacji();
				}
				break;
			case 19:
				{
				setState(96);
				inspekcja();
				}
				break;
			case 20:
				{
				setState(97);
				koniec_inspekcji();
				}
				break;
			case 21:
				{
				setState(98);
				inspekcja_srodowiska();
				}
				break;
			case 22:
				{
				setState(99);
				zakoncz();
				}
				break;
			case 23:
				{
				setState(100);
				wstrzykniecie_osobnika_do_srodowiska();
				}
				break;
			case 24:
				{
				setState(101);
				waga_operatora_genetycznego();
				}
				break;
			case 25:
				{
				setState(102);
				listuj_operatory_genetyczne();
				}
				break;
			}
			setState(105);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NazwanapisContext extends ParserRuleContext {
		public TerminalNode NAPIS_DOSL() { return getToken(ProszczGPParser.NAPIS_DOSL, 0); }
		public TerminalNode NAZWA() { return getToken(ProszczGPParser.NAZWA, 0); }
		public NazwanapisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nazwanapis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterNazwanapis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitNazwanapis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitNazwanapis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NazwanapisContext nazwanapis() throws RecognitionException {
		NazwanapisContext _localctx = new NazwanapisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nazwanapis);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !(_la==NAZWA || _la==NAPIS_DOSL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EchoContext extends ParserRuleContext {
		public TerminalNode NAPIS_DOSL() { return getToken(ProszczGPParser.NAPIS_DOSL, 0); }
		public TerminalNode NAZWA() { return getToken(ProszczGPParser.NAZWA, 0); }
		public EchoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_echo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterEcho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitEcho(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitEcho(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EchoContext echo() throws RecognitionException {
		EchoContext _localctx = new EchoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_echo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__0);
			setState(110);
			_la = _input.LA(1);
			if ( !(_la==NAZWA || _la==NAPIS_DOSL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ustaw_nazweContext extends ParserRuleContext {
		public TerminalNode NAZWA() { return getToken(ProszczGPParser.NAZWA, 0); }
		public Ustaw_nazweContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ustaw_nazwe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterUstaw_nazwe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitUstaw_nazwe(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitUstaw_nazwe(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ustaw_nazweContext ustaw_nazwe() throws RecognitionException {
		Ustaw_nazweContext _localctx = new Ustaw_nazweContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ustaw_nazwe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__1);
			setState(113);
			match(NAZWA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ustaw_katalogContext extends ParserRuleContext {
		public TerminalNode NAPIS_DOSL() { return getToken(ProszczGPParser.NAPIS_DOSL, 0); }
		public TerminalNode NAZWA() { return getToken(ProszczGPParser.NAZWA, 0); }
		public Ustaw_katalogContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ustaw_katalog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterUstaw_katalog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitUstaw_katalog(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitUstaw_katalog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ustaw_katalogContext ustaw_katalog() throws RecognitionException {
		Ustaw_katalogContext _localctx = new Ustaw_katalogContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ustaw_katalog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__2);
			setState(116);
			_la = _input.LA(1);
			if ( !(_la==NAZWA || _la==NAPIS_DOSL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Wykonaj_skryptContext extends ParserRuleContext {
		public TerminalNode NAPIS_DOSL() { return getToken(ProszczGPParser.NAPIS_DOSL, 0); }
		public TerminalNode NAZWA() { return getToken(ProszczGPParser.NAZWA, 0); }
		public Wykonaj_skryptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wykonaj_skrypt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterWykonaj_skrypt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitWykonaj_skrypt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitWykonaj_skrypt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wykonaj_skryptContext wykonaj_skrypt() throws RecognitionException {
		Wykonaj_skryptContext _localctx = new Wykonaj_skryptContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_wykonaj_skrypt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__3);
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==NAZWA || _la==NAPIS_DOSL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrzypadkiContext extends ParserRuleContext {
		public TerminalNode NAPIS_DOSL() { return getToken(ProszczGPParser.NAPIS_DOSL, 0); }
		public TerminalNode NAZWA() { return getToken(ProszczGPParser.NAZWA, 0); }
		public List<Opcja_przypadkowContext> opcja_przypadkow() {
			return getRuleContexts(Opcja_przypadkowContext.class);
		}
		public Opcja_przypadkowContext opcja_przypadkow(int i) {
			return getRuleContext(Opcja_przypadkowContext.class,i);
		}
		public PrzypadkiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_przypadki; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).enterPrzypadki(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProszczGPListener ) ((ProszczGPListener)listener).exitPrzypadki(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProszczGPVisitor ) return ((ProszczGPVisitor<? extends T>)visitor).visitPrzypadki(this);
			else return visitor.visitChildren(this);
		}
	}
